apps/base/search/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: search
spec:
  ipAllowList:
    sourceRange:
      - ${LAN_IPV4_SUBNET}
      - ${VPN_IPV4_SUBNET}
      - ${LAN_IPV6_SUBNET}
      - ${VPN_IPV6_SUBNET}
