apps/base/search/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: search
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: searxng
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: searxng
      labels:
        app: searxng
    spec:
      containers:
        - env:
            - name: FORCE_OWNERSHIP
              value: !!str false
          image: ghcr.io/searxng/searxng:2026.6.18-bd73cc09e
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: searxng
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 1m
              memory: 215Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 977
            runAsNonRoot: true
            runAsUser: 977
          volumeMounts:
            - mountPath: /etc/searxng
              name: config
            - mountPath: /tmp
              name: temp
            - mountPath: /var/cache/searxng
              name: data
      enableServiceLinks: false
      securityContext:
        fsGroup: 977
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - secret:
            secretName: searxng-config
          name: config
        - emptyDir: {}
          name: data
        - emptyDir: {}
          name: temp
