apps/base/search/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: search
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: searxng
  type: ClusterIP
