apps/base/search/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: search
  namespace: search
spec:
  hostnames:
    - search.example.com # patched in overlay
  parentRefs:
    - name: phobos-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: search
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-cert
  namespace: search
spec:
  from:
    - group: ""
      kind: Gateway
      namespace: traefik
  to:
    - group: ""
      kind: Secret
      name: search-tls
