apps/base/search/resources/ingressroute.yaml
# yamllint disable rule:line-length
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: search
  namespace: search
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "" # patched in overlay
      middlewares:
        - name: ip-allowlist
      services:
        - name: search
          port: 80
  tls:
    secretName: search-tls
